[package]
name = "share"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
fast_image_resize = "1.0.0"
image = "0.24.3"
random-string = "1.0.0"
actix-cors = "0.6.2"
actix-files = "0.6.1"
serde_json = "1.0.85"
derive_more = "0.99.17"
# libraw= "0.1.1"
ffmpeg-next = "5.1.1"